log/build_2025-09-26_11-46-06/ros2_zhongli_bridge_cpp/stderr.log
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/path_converter.cpp: In member function ‘bool zhongli_bridge::PathConverter::validate_trajectory(const std::vector<zhongli_protocol::TrajectoryPoint>&)’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/path_converter.cpp:172:19: error: ‘const struct zhongli_protocol::TrajectoryPoint’ has no member named ‘speed’
  172 |         if (point.speed < 0.0 || point.speed > 10.0) {  // 合理的速度范围：0-10 m/s
      |                   ^~~~~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/path_converter.cpp:172:40: error: ‘const struct zhongli_protocol::TrajectoryPoint’ has no member named ‘speed’
  172 |         if (point.speed < 0.0 || point.speed > 10.0) {  // 合理的速度范围：0-10 m/s
      |                                        ^~~~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/include/ros2_zhongli_bridge.hpp:3,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:1:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp: In member function ‘bool zhongli_bridge::ROS2ZhongliBridge::initialize()’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:30:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   30 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:51:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   51 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
gmake[2]: *** [src/lib/CMakeFiles/ros2_zhongli_bridge.dir/build.make:90: src/lib/CMakeFiles/ros2_zhongli_bridge.dir/path_converter.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:257: src/lib/CMakeFiles/ros2_zhongli_bridge.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
